--- a/config/database.yml
+++ b/config/database.yml
@@ -12,10 +12,9 @@ development:
 test:
   <<: *default
   database: habit_test
-
 production:
-  <<: *default
-  database: habit_production
-  username: habit
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  host: <%= ENV['DATABASE_HOST'] %>
+    <<: *default
+    database: habit_production
+    username: habit
+    password: <%= ENV["HABIT_DATABASE_PASSWORD"] %>
+    host: <%= ENV['DATABASE_HOST'] %>
