--- a/config/database.yml
+++ b/config/database.yml
@@ -12,9 +12,12 @@ development:
 test:
   <<: *default
   database: habit_test
+
 production:
+  primary:
     <<: *default
-    database: habit_production
-    username: habit
-    password: <%= ENV["HABIT_DATABASE_PASSWORD"] %>
-    host: <%= ENV['DATABASE_HOST'] %>
+    url: <%= ENV["DATABASE_URL"] %>
+
+  cable:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
