--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,6 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: 5
   timeout: 5000
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
@@ -23,5 +22,9 @@ production:
     url: <%= ENV["DATABASE_URL"] %>
 
   queue:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
+
+  cache:
     <<: *default
     url: <%= ENV["DATABASE_URL"] %>
