--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  pool: 5
   timeout: 5000
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
@@ -13,18 +14,20 @@ test:
   database: habit_test
 
 production:
-  primary:
+  primary: &primary_production
     <<: *default
-    url: <%= ENV["DATABASE_URL"] %>
-
-  cable:
-    <<: *default
-    url: <%= ENV["DATABASE_URL"] %>
-
-  queue:
-    <<: *default
-    url: <%= ENV["DATABASE_URL"] %>
-
+    database: habit_production
+    username: habit
+    password: <%= ENV["HABIT_DATABASE_PASSWORD"] %>
   cache:
-    <<: *default
-    url: <%= ENV["DATABASE_URL"] %>
+    <<: *primary_production
+    database: habit_production_cache
+    migrations_paths: db/cache_migrate
+  queue:
+    <<: *primary_production
+    database: habit_production_queue
+    migrations_paths: db/queue_migrate
+  cable:
+    <<: *primary_production
+    database: habit_production_cable
+    migrations_paths: db/cable_migrate
