--- a/config/database.yml
+++ b/config/database.yml
@@ -14,20 +14,8 @@ test:
   database: habit_test
 
 production:
-  primary: &primary_production
-    <<: *default
-    database: habit_production
-    username: habit
-    password: <%= ENV["HABIT_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: habit_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: habit_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: habit_production_cable
-    migrations_paths: db/cable_migrate
+  <<: *default
+  database: blogapp_production
+  username: blogapp
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: <%= ENV['DATABASE_HOST'] %>
