--- a/config/database.yml
+++ b/config/database.yml
@@ -19,3 +19,4 @@ production:
   username: habit
   password: <%= ENV['DATABASE_PASSWORD'] %>
   host: <%= ENV['DATABASE_HOST'] %>
+  url: <%= ENV["DATABASE_URL"] %>
