--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,9 @@ production:
   password: <%= ENV['DATABASE_PASSWORD'] %>
   host: <%= ENV['DATABASE_HOST'] %>
   url: <%= ENV["DATABASE_URL"] %>
+  primary:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
   cable:
     <<: *default
     url: <%= ENV["DATABASE_URL"] %>
