--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,8 @@
+# config/database.yml
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: 5
-  timeout: 5000
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
 
 development:
   <<: *default
@@ -14,12 +13,6 @@ test:
   database: habit_test
 
 production:
-  <<: *default
-  database: habit_production
-  username: habit
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  host: <%= ENV['DATABASE_HOST'] %>
-  url: <%= ENV["DATABASE_URL"] %>
   primary:
     <<: *default
     url: <%= ENV["DATABASE_URL"] %>
