--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  timeout: 5000
   pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
 
 development:
@@ -12,20 +13,16 @@ test:
   database: habit_test
 
 production:
-  primary: &primary_production
+
+  primary:
     <<: *default
-    database: habit_production
-    username: habit
-    password: <%= ENV["HABIT_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: habit_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: habit_production_queue
-    migrations_paths: db/queue_migrate
+    url: <%= ENV["DATABASE_URL"] %>
   cable:
-    <<: *primary_production
-    database: habit_production_cable
-    migrations_paths: db/cable_migrate
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
+  queue:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
+  cache:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
